--- a/website/littlefamily.css
+++ b/website/littlefamily.css
@@ -48,16 +48,21 @@ header .header-content, section .container, section .container-fluid{
 .main-icon {
     margin-bottom: 20px;
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
 }
 .logo-text-img {
-	margin-top: 10%;
+	margin-top: 25%;
 	width: 100%;
 	max-width: 600px;
 }
 .subtitle {
-    margin-top: 5px;
+    margin-top: 60px;
     margin-bottom: 30px;
+    line-height: 50px;
+}
+.small-title h3 {
+    line-height: 35px;
+    margin-bottom: 20px;
 }
 .bg-dark {
     background-color: darkblue;
@@ -266,6 +271,25 @@ header .header-content, section .container, section .container-fluid{
 
 .embed-responsive {
 	margin: 30px;
+}
+
+.partner-list {
+    list-style-type: none;
+    margin-left: 0px;
+    padding:0px;
+}
+
+.partner-list li {
+    margin-bottom: 20px;
+    margin-left: 0px;
+
+}
+
+#partners img {
+    background-color: white;
+    padding: 10px;
+    width: 320px;
+    margin-bottom: 20px;
 }
 
 @media(min-width:768px) {
