--- a/LittleFamilyApp/src/main/res/layout/activity_choose_remote_service.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_choose_remote_service.xml
@@ -39,7 +39,8 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/myheritage_logo"
         android:onClick="chooseMyHeritage"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:visibility="gone"/>
 
     <ImageView
         android:layout_width="fill_parent"
