--- a/LittleFamilyApp/src/main/res/layout/activity_choose_remote_service.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_choose_remote_service.xml
@@ -29,7 +29,7 @@
         android:layout_below="@+id/textView4"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="20dp" />
 
     <ImageView
         android:layout_width="fill_parent"
@@ -39,8 +39,8 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/myheritage_logo"
         android:onClick="chooseMyHeritage"
-        android:layout_marginTop="15dp"
-        android:visibility="visible"/>
+        android:layout_marginTop="20dp"
+        android:visibility="gone"/>
 
     <ImageView
         android:layout_width="fill_parent"
@@ -50,7 +50,7 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/pgv_logo"
         android:onClick="choosePGV"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
