--- a/LittleFamilyApp/src/main/res/layout/activity_choose_remote_service.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_choose_remote_service.xml
@@ -40,7 +40,7 @@
         android:src="@drawable/myheritage_logo"
         android:onClick="chooseMyHeritage"
         android:layout_marginTop="20dp"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
     <ImageView
         android:layout_width="fill_parent"
