Fix record audio dialog

--- a/LittleFamilyApp/src/main/res/layout/fragment_adult_auth.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_adult_auth.xml
@@ -42,7 +42,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:enabled="false"
-        android:editable="false"
+        android:inputType="none"
         android:layout_marginTop="5dp" />
 
     <EditText
@@ -59,28 +59,36 @@
         android:hint="@string/prompt_password"
         android:layout_marginTop="5dp" />
 
-    <Button
+    <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/action_sign_in_short"
-        android:id="@+id/signInBtn"
+        android:text="@string/remember_20"
+        android:id="@+id/rememberChk"
         android:layout_below="@+id/password"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        />
+        android:layout_alignParentStart="true" />
 
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cancel"
-        android:id="@+id/cancelBtn"
-        android:layout_below="@+id/signInBtn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-         />
+        android:layout_below="@+id/rememberChk">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel"
+            android:id="@+id/cancelBtn"
+            android:layout_weight="1" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/action_sign_in_short"
+            android:id="@+id/signInBtn"
+            android:layout_weight="1" />
+    </LinearLayout>
 
 </RelativeLayout>
