--- a/LittleFamilyApp/src/main/res/layout/fragment_audio_recorder.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_audio_recorder.xml
@@ -52,4 +52,13 @@
 
     </LinearLayout>
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/close"
+        android:id="@+id/closeButton"
+        android:layout_below="@+id/linearLayout4"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
