First take at a notification service

--- a/LittleFamilyApp/src/main/res/values/strings_activity_settings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings_activity_settings.xml
@@ -92,5 +92,6 @@
     <string name="pref_title_website">Website</string>
     <string name="pref_title_quiet_mode">Quiet Mode</string>
     <string name="pref_summary_quiet_mode">Can also be toggled on the first loading screen.</string>
+    <string name="pref_title_notifications">Enable Notifications</string>
 
 </resources>
