--- a/LittleFamilyApp/src/main/res/xml/pref_general.xml
+++ b/LittleFamilyApp/src/main/res/xml/pref_general.xml
@@ -11,9 +11,6 @@
         android:negativeButtonText="@null"
         android:positiveButtonText="@null" />
 
-    <Preference android:title="@string/pref_title_manage_creds" android:key="manage_creds">
-    </Preference>
-
     <CheckBoxPreference android:title="@string/pref_title_sync_data_background" android:key="sync_background" android:defaultValue="true" />
     <CheckBoxPreference android:title="@string/pref_title_sync_data_cellular" android:key="sync_cellular" android:defaultValue="false" />
     <ListPreference
@@ -24,6 +21,9 @@
         android:entryValues="@array/pref_sync_frequency_values"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null" />
+
+    <CheckBoxPreference android:title="@string/pref_title_notifications" android:key="enable_notifications" android:defaultValue="true"
+         />
 
     <Preference android:title="@string/pref_title_manage_people" android:key="manage_people">
     </Preference>
