Columbia clothing show my family on search

--- a/LittleFamilyApp/src/main/res/layout/activity_person_search.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_person_search.xml
@@ -84,8 +84,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/personList"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/showFamilyButton"/>
+
+    <Button
+        style="?android:attr/buttonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/show_family"
+        android:id="@+id/showFamilyButton"
         android:layout_below="@+id/linearLayout2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="showMyFamily"/>
 
 </RelativeLayout>
