MyHeritage is Alive!

--- a/LittleFamilyApp/src/main/res/layout/activity_my_heritage_login.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_my_heritage_login.xml
@@ -16,4 +16,14 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:src="@drawable/myheritage_logo" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/title_welcome"
+        android:id="@+id/welcomeTxt"
+        android:layout_below="@+id/imageView5"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
