--- a/LittleFamilyApp/src/main/res/layout/activity_choose_remote_service.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_choose_remote_service.xml
@@ -40,7 +40,7 @@
         android:src="@drawable/myheritage_logo"
         android:onClick="chooseMyHeritage"
         android:layout_marginTop="20dp"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
     <ImageView
         android:layout_width="fill_parent"
@@ -50,7 +50,8 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/pgv_logo"
         android:onClick="choosePGV"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        />
 
     <TextView
         android:layout_width="wrap_content"
