--- a/LittleFamilyApp/src/main/res/xml/pref_general.xml
+++ b/LittleFamilyApp/src/main/res/xml/pref_general.xml
@@ -51,6 +51,10 @@
         android:summary="@string/pref_summary_visit_web" android:key="website">
     </Preference>
 
+    <Preference android:title="@string/pref_title_restore_purchases"
+        android:summary="@string/pref_summary_restore_purchases" android:key="restore">
+    </Preference>
+
     <Preference android:title="@string/pref_title_version" android:key="version">
     </Preference>
 
