--- a/LittleFamilyApp/src/main/res/xml/pref_general.xml
+++ b/LittleFamilyApp/src/main/res/xml/pref_general.xml
@@ -55,6 +55,10 @@
         android:summary="@string/pref_summary_restore_purchases" android:key="restore">
     </Preference>
 
+    <Preference android:title="@string/pref_title_enter_premium_code"
+        android:summary="@string/pref_summary_enter_code" android:key="enter_code">
+    </Preference>
+
     <Preference android:title="@string/pref_title_version" android:key="version">
     </Preference>
 
