--- a/LittleFamilyApp/src/main/res/layout/fragment_adult_auth.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_adult_auth.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/adult_auth_explanation"
-        android:id="@+id/textView5"
+        android:id="@+id/code"
         android:layout_below="@+id/remoteLogo"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -35,8 +35,8 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txtUsername"
-        android:layout_below="@+id/textView5"
+        android:id="@+id/code"
+        android:layout_below="@+id/code"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -51,7 +51,7 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/password"
-        android:layout_below="@+id/txtUsername"
+        android:layout_below="@+id/code"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
