--- a/LittleFamilyApp/src/main/res/layout/fragment_restore_purchases.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_restore_purchases.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/checking_for_purchases"
-        android:id="@+id/statusText"
+        android:id="@+id/status"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -24,8 +24,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/statusText"
-        android:layout_toEndOf="@+id/statusText"
+        android:layout_toRightOf="@+id/status"
+        android:layout_toEndOf="@+id/status"
         android:layout_marginLeft="15dp" />
 
 </RelativeLayout>
