--- a/LittleFamilyApp/src/main/res/layout/fragment_adult_auth.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_adult_auth.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/adult_auth_explanation"
-        android:id="@+id/code"
+        android:id="@+id/authExpl"
         android:layout_below="@+id/remoteLogo"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtUsername"
-        android:layout_below="@+id/code"
+        android:layout_below="@+id/authExpl"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
