--- a/LittleFamilyApp/src/main/res/layout/fragment_pg_home.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_pg_home.xml
@@ -68,7 +68,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/star1"
-                android:layout_centerVertical="true"
+                android:layout_below="@+id/imageView3"
                 android:layout_centerHorizontal="true" />
 
             <ImageView
@@ -88,6 +88,27 @@
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/imageView14"
                 android:layout_toStartOf="@+id/imageView14" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imageView7"
+                android:src="@drawable/redstar1"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_toStartOf="@+id/imageView14"
+                android:layout_below="@+id/imageView3"
+                android:layout_toLeftOf="@+id/imageView14" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imageView8"
+                android:src="@drawable/redstar1"
+                android:layout_below="@+id/imageView14"
+                android:layout_alignRight="@+id/imageView"
+                android:layout_alignEnd="@+id/imageView" />
         </RelativeLayout>
 
     </LinearLayout>
