--- a/website/littlefamily.css
+++ b/website/littlefamily.css
@@ -273,6 +273,13 @@ header .header-content, section .container, section .container-fluid{
     transition: all .35s;
 }
 
+.box-star {
+    position: absolute;
+    width: 30px;
+    right: 0px;
+    top: 80%;
+}
+
 .socialbuttons {
     position: absolute;
     right: 10px;
