--- a/LittleFamilyApp/src/main/res/layout/activity_new_settings.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_new_settings.xml
@@ -114,7 +114,7 @@
                     android:id="@+id/textView15"
                     android:layout_weight="1"
                     android:layout_gravity="left|center_vertical"
-                    android:onClick="onChooseSync"/>
+                    android:onClick="onChooseSync" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -183,24 +183,6 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:minHeight="60dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/pref_title_manage_people"
-                    android:id="@+id/txtManagePeople"
-                    android:layout_weight="1"
-                    android:layout_gravity="left|center_vertical"
-                    android:onClick="showManagePeople"
-                    android:clickable="true"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:minHeight="60dp"
                 >
 
@@ -221,6 +203,47 @@
                     android:layout_gravity="center_vertical"
                     android:onClick="onQuietMode"/>
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:minHeight="60dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="@string/pref_title_skin_color"
+                    android:id="@+id/textView22"
+                    android:layout_weight="2"
+                    android:layout_gravity="center_vertical"
+                    android:onClick="onChooseSkin" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/skinView"
+                    android:layout_weight="0"
+                    android:src="@drawable/boy"
+                    android:onClick="onChooseSkin" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:minHeight="60dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="@string/pref_title_manage_people"
+                    android:id="@+id/txtManagePeople"
+                    android:layout_weight="1"
+                    android:layout_gravity="left|center_vertical"
+                    android:onClick="showManagePeople"
+                    android:clickable="true"/>
             </LinearLayout>
 
             <LinearLayout
