--- a/LittleFamilyApp/src/main/res/layout/fragment_pg_home.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_pg_home.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="@string/title_guide_home"
+        android:text="@string/title_guide_follow_the_stars"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_marginBottom="10dp" />
 
@@ -33,6 +33,76 @@
             android:text="@string/guide_home_activity"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_marginLeft="10dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/textView34"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1"
+            android:text="@string/guide_follow_stars"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/imageView14"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/star1"
+                android:layout_below="@+id/imageView3"
+                android:layout_centerHorizontal="true" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/star1"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/imageView14"
+                android:layout_toEndOf="@+id/imageView14" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/star1"
+                android:layout_alignParentTop="true"
+                android:layout_toLeftOf="@+id/imageView14"
+                android:layout_toStartOf="@+id/imageView14" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imageView7"
+                android:src="@drawable/redstar1"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_toStartOf="@+id/imageView14"
+                android:layout_below="@+id/imageView3"
+                android:layout_toLeftOf="@+id/imageView14" />
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/imageView8"
+                android:src="@drawable/redstar1"
+                android:layout_below="@+id/imageView14"
+                android:layout_alignRight="@+id/imageView"
+                android:layout_alignEnd="@+id/imageView" />
+        </RelativeLayout>
+
     </LinearLayout>
 
 </LinearLayout>
