--- a/LittleFamilyApp/src/main/res/values/strings_activity_settings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings_activity_settings.xml
@@ -101,5 +101,6 @@
     <string name="purchase_not_found">Previous purchase was not found for this account.</string>
     <string name="pref_title_enter_premium_code">Enter Premium Code</string>
     <string name="pref_summary_enter_code">Enter a premium redemption code.</string>
+    <string name="pref_title_skin_color">Default Skin Color</string>
 
 </resources>
