--- a/website/littlefamily.css
+++ b/website/littlefamily.css
@@ -307,7 +307,8 @@ header .header-content, section .container, section .container-fluid{
 }
 
 .embed-responsive {
-	margin: 30px;
+	margin: 10px;
+	padding-bottom: 40%;
 }
 
 .partner-list {
